; ModuleID = '/home/carl/AnghaBench/tmux/extr_layout.c_layout_make_leaf.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_layout.c_layout_make_leaf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.layout_cell = type { %struct.window_pane*, i32, i32 }
%struct.window_pane = type { %struct.layout_cell* }

@LAYOUT_WINDOWPANE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @layout_make_leaf(%struct.layout_cell* %0, %struct.window_pane* %1) #0 {
  %3 = alloca %struct.layout_cell*, align 8
  %4 = alloca %struct.window_pane*, align 8
  store %struct.layout_cell* %0, %struct.layout_cell** %3, align 8
  store %struct.window_pane* %1, %struct.window_pane** %4, align 8
  %5 = load i32, i32* @LAYOUT_WINDOWPANE, align 4
  %6 = load %struct.layout_cell*, %struct.layout_cell** %3, align 8
  %7 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %6, i32 0, i32 2
  store i32 %5, i32* %7, align 4
  %8 = load %struct.layout_cell*, %struct.layout_cell** %3, align 8
  %9 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %8, i32 0, i32 1
  %10 = call i32 @TAILQ_INIT(i32* %9)
  %11 = load %struct.layout_cell*, %struct.layout_cell** %3, align 8
  %12 = load %struct.window_pane*, %struct.window_pane** %4, align 8
  %13 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %12, i32 0, i32 0
  store %struct.layout_cell* %11, %struct.layout_cell** %13, align 8
  %14 = load %struct.window_pane*, %struct.window_pane** %4, align 8
  %15 = load %struct.layout_cell*, %struct.layout_cell** %3, align 8
  %16 = getelementptr inbounds %struct.layout_cell, %struct.layout_cell* %15, i32 0, i32 0
  store %struct.window_pane* %14, %struct.window_pane** %16, align 8
  ret void
}

declare dso_local i32 @TAILQ_INIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
